--- a/css/pronombres2.css
+++ b/css/pronombres2.css
@@ -607,6 +607,19 @@ input[type="radio"]
 	padding-bottom: 3%;
 }
 
+.p:hover
+{	
+	border: 3px solid #D3D3D3;
+	background-color: #D3D3D3;
+	font-size: 10em;
+	margin-bottom: 2%;
+	margin-top: 2%;
+	max-width: 100%;
+	min-width: 100%;
+	padding-top: 3%;
+	padding-bottom: 3%;
+}
+
 .botones
 {
 	float: none;
