--- a/css/futuro.css
+++ b/css/futuro.css
@@ -115,12 +115,13 @@ body #nav > ul > li > span
 	text-decoration: none;
 	border: 0;
 	outline: 0;
+
 }
 
 
 body #nav > ul > li:hover
 {
-	background: #3AA6D0;
+	background: #1B8610;
 	height: 15%;
 	text-shadow: rgba(0,0,0,0.5) 2px 2px 2px;
 }
@@ -197,6 +198,16 @@ input[type="radio"]
 	min-width: 100%;
 	padding-top: 3%;
 	padding-bottom: 3%;
+
+	-webkit-transition: all 0.2s; /* Chrome antiguo y Safari */
+    -moz-transition: all 0.5s; /* Mozilla antiguo */
+    -o-transition: all 0.5s; /* Opera antiguo */
+    transition: all 0.2s; /* Regla estandar */
+}
+
+.p:hover
+{
+	background-color: #1B8610;
 }
 
 .botones
