--- a/css/numeros.css
+++ b/css/numeros.css
@@ -205,6 +205,45 @@ input[type="radio"]
 	
 }
 
+.botonc {
+	display: inline-block;
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+    
+    color: #111;
+	border-radius: 5px;
+    font-weight: bold;
+    font-size: 12px;
+    margin: 0 3px;
+    margin-bottom: 1em;
+    margin-left: 37%;
+    margin-top: 1em;
+    padding: .5em;
+    padding-bottom: 1em;
+    position: relative;
+    text-shadow: 0 1px 0 rgba(0,0,0,0.2);
+    text-decoration: none;
+    text-transform: uppercase;
+    
+    /* Animacion del boton compatible con diferentes navegadores */
+    -webkit-transition: all 0.1s; /* Chrome antiguo y Safari */
+    -moz-transition: all 0.1s; /* Mozilla antiguo */
+    -o-transition: all 0.1s; /* Opera antiguo */
+    transition: all 0.1s; /* Regla estandar */
+}
+
+.botonc:active {
+    -webkit-transform: translateY(7px);
+    -moz-transform: translateY(7px);
+    -o-transform: translateY(7px);
+    transform: translateY(7px);
+}
+
+.botond {
+    background: #3AA6D0;
+    box-shadow: 0 10px 0 #3AA6D0,
+                0 11px 5px rgba(0,0,0,0.5);
+}
+
 strong 
 {
 	text-decoration: underline;
