--- a/css/pronombres.css
+++ b/css/pronombres.css
@@ -1,3 +1,5 @@
+@media screen and (max-width:960px) and (min-width: 480px){
+
 @charset "UTF-8";
 @font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
 a{
@@ -216,12 +218,12 @@ input[type="radio"]
 {	
 	border: none;
 	background-color: #D3D3D3; 
-	font-size: 1em;
+	font-size: 1.2em;
 	margin-bottom: 2%;
 	margin-top: 2%;
-	margin-left: -50%;
+	margin-left: 1%;
 	max-width: 100%;
-	min-width: 200%;
+	min-width: 100%;
 	padding-top: 3%;
 	padding-bottom: 3%;
 
@@ -259,7 +261,7 @@ input[type="radio"]
     font-size: 12px;
     margin: 0 3px;
     margin-bottom: 1em;
-    margin-left: 37%;
+    margin-left: 40%;
     margin-top: 1em;
     padding: .5em;
     padding-bottom: 1em;
@@ -489,7 +491,9 @@ ol.style1
 .fa-google-plus-square:before{content:"\f0d4"}
 .fa-google-plus:before{content:"\f0d5"}
 
-@media screen and (min-width:960px){
+}
+
+@media screen and (max-width:1440px) and (min-width: 960px){
 
 @charset "UTF-8";
 @font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
@@ -713,13 +717,13 @@ input[type="radio"]
 	display: inline-block;
     border-bottom: 1px solid rgba(255,255,255,0.2);
     
-    color: #FFF;
+    color: #111;
 	border-radius: 5px;
     font-weight: bold;
-    font-size: 14px;
-    margin: 0 3%;
-    margin-left: 8em;
-    margin-top: 1em;
+    font-size: 13px;
+    margin: auto;
+    margin-left: 9.5em;
+    margin-top: 2em;
     padding: 10px 20px;
     padding-bottom: 1em;
     position: relative;
@@ -950,7 +954,7 @@ ol.style1
 
 }
 
-@media screen and (max-width:480px){
+@media screen and (max-width:480px) {
 	@charset "UTF-8";
 @font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
 a{
@@ -1164,7 +1168,7 @@ input[type="radio"]
     -o-transition: all 0.5s; /* Opera antiguo */
     transition: all 0.2s; /* Regla estandar */
 }
-}
+
 .p:hover
 {
 	background-color: #3AA6D0;
@@ -1177,12 +1181,13 @@ input[type="radio"]
     
     color: #111;
 	border-radius: 5px;
+	display: inline-block;
     font-weight: bold;
     font-size: 11px;
     margin: 0 3%;
     margin-bottom: 1em;
-    margin-left: 12em;
-    margin-top: 1em;
+    margin-left: 1em;
+    margin-top: 2em;
    /*padding: 3px 10px;*/
     padding-bottom: .5em;
     position: relative;
@@ -1411,5 +1416,5 @@ ol.style1
 .fa-google-plus-square:before{content:"\f0d4"}
 .fa-google-plus:before{content:"\f0d5"}
 
-
+}
 	
